# basic_geo

./: app.py  geo.htm  index.htm  pyproject.toml
